tests/expectations/compiler/tuple/tuple_not_allowed_fail.out
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:21:9
     |
  21 |         mem: (u8, u16)
     |         ^^^
Error [ETYC0372051]: A function cannot take in a tuple as input.
    --> compiler-test:7:18
     |
   7 |     function foo(a: (u8, u16)) -> (u8, u16) {
     |                  ^^^^^^^^^^^^
Error [ETYC0372049]: A tuple type cannot contain a tuple.
    --> compiler-test:11:36
     |
  11 |     function bar(zz: bool) -> (u8, (u16, u32)) {
     |                                    ^^^^^^^^^^
Error [ETYC0372052]: A tuple expression cannot contain another tuple expression.
    --> compiler-test:12:22
     |
  12 |         return (1u8, (2u16, 3u32));
     |                      ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `(u8, u16)` was found.
    --> compiler-test:16:13
     |
  16 |         for i: (u8, u16) in 0u8..2u8 {}
     |             ^
Error [ETYC0372117]: Expected type `(u8, u16)` but type `u8` was found.
    --> compiler-test:16:29
     |
  16 |         for i: (u8, u16) in 0u8..2u8 {}
     |                             ^^^
Error [ETYC0372117]: Expected type `(u8, u16)` but type `u8` was found.
    --> compiler-test:16:34
     |
  16 |         for i: (u8, u16) in 0u8..2u8 {}
     |                                  ^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
